Profile working Change pass working Moved back tasks to activity, as previous change didn't work on serverCalls class TODO user list/admin list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,7 @@
     <string name="dialog_add_user">Afegir usuari</string>
     <string name="cb_au_isAdmin">Admin</string>
     <string name="menu_logout">Logout</string>
+    <string name="bt_change_info">Modifica</string>
+    <string name="bt_change_pass">Canvia \n Contrassenya</string>
+    <string name="temporal">Default</string>
 </resources>
