TODO: BookProfile + Bookings DONE: Book List using CardView. Update user working properly now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string name="ab_rating">Valoracio</string>
     <string name="bt_ab_add">Afegir</string>
     <string name="bt_ab_exit">Cancelar</string>
+    <string name="bt_cv_open">Obre</string>
+    <string name="bt_cv_delete">Elimina</string>
 </resources>
