DONE: Bookings list, Check for urgent bookings. Add filter to books list for free books TODO: Friends Maybe?

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,4 +64,8 @@
     <string name="dialog_delete_user_message">Voleu esborrar usuari</string>
     <string name="dialog_delete_book_message">Voleu esborrar llibre</string>
     <string name="ub_new_name">Nou nom del llibre</string>
+    <string name="ibt_bookings">Prestecs</string>
+    <string name="cb_cv_bookings">Tornat</string>
+    <string name="cb_cv_urgent">Fora de termini</string>
+    <string name="cb_books_free">Llibre no reservat</string>
 </resources>
